2011-04-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actor/share.py: Added support for 'Share'.

2011-03-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.3-b2 release.

2011-03-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/*: Improved implementation for Album API.

2011-03-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/api.py: Added FacebookHomeAlbumAPI for a option
	  'Include other photos in the same album'.

2011-03-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* frame.py (PhotoFrame): Opens a photo with 1st mouse button
	  double clicking (issue #91).  Added new gconf key
	  'window_keep_below' (issue #90).
	
2011-03-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.3-b1 release.
	* facebook/authdialog.py: Added a 'Loading...' label on the 
	  webkit UI.

2011-03-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* defaultsource.py: Set default photo sources at the first launch
	  time.
	* dbus/networkstatecustom.py: Added new gconf key 'use_conn'.
	* dbus/networkstate.py: Added checking for the networking state.

2011-03-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/checkinstalled.py: Added checking if the application
	  softwares are installed.
	* utils/urlgetautoproxy.py (UrlGetWithAutoProxy): Added new method 
	  'catch_error'.
	* po/it.po: Updated Italian translation.  Thanks Cristian Marchi!

2011-03-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/gtkimage.py: Added new gconf key 'filter/max_file_size_mb'
	  (issue #87).

2011-03-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* picasa.py, tumblr.py: More translation.
	* share/extra/flickrfavlist.py: Included an extra script for
	  flickr fav list.

2011-03-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/plugin.py: Added support for auth info on the Plugin
	  Treeview.

2011-03-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/facebook.py: Added support for 'News Feed' and 'Wall'.
