@@ -1,10 +1,13 @@
 from gettext import gettext as _
 
 from ...utils.iconimage import IconImage
-from info import ActorGeoIcon
 from ...plugins.tumblr import TumblrShare
+from trash import ActorTrashIcon, TrashDialog
 
-class ActorShareIcon(ActorGeoIcon):
+class ActorShareIcon(ActorTrashIcon):
+
+    def _set_dialog(self):
+        self.dialog = ShareDialog()
 
     def _check_photo(self):
         return self.photo.can_share()
@@ -15,11 +18,13 @@ class ActorShareIcon(ActorGeoIcon):
     def _get_ui_data(self):
         self._set_ui_options('share', False, 0)
 
-    def _on_button_press_cb(self, actor, event):
-        print "push!"
-
-        share = TumblrShare()
-        share.add(self.photo)
-
     def _enter_cb(self, w, e, tooltip):
         tooltip.update_text(_("Share on Tumblr"))
+
+class ShareDialog(TrashDialog):
+
+    def _set_variable(self, photo):
+        self.text = [ _("Share this photo on Tumblr?"),
+                      _("This photo will be shared on Tumblr.") ]
+        share = TumblrShare()
+        self.delete_method = share.add
