@@ -1,3 +1,7 @@
+2011-04-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* actor/share.py: Added a confirmation dialog.
+
 2011-04-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* actor/share.py: Added support for 'Share'.
